--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,18 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.6/slick.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.6/slick-theme.min.css">
+    
 </head>
 <body ng-cloak>
 		<app>
       <div class="text-center">loading... <img src="assets/icon-128x128.png"></div>
-    </app>
+	</app>
+	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.6/slick.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-slick-carousel/3.1.7/angular-slick.js"></script>
 </body>
 </html>
